--- a/index.html
+++ b/index.html
@@ -15,59 +15,39 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <div class="wrapper">
-        <header class="header">
-            <section class="header-top">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 col-sm-8 col-xs-12">
-                            <div class="text">
-                                <!-- <p><span class="phone"><a href="#">Phone: +1023546789</a></span><span class="email"><a href="#">Email: testdomain@gmail.com</a></span></p> -->
-                                <h2 class="iitheading" >INDIAN INSTITUTE OF TECHNOLOGY INDORE
-                                  </h2>
-                            </div>
+<div class="wrapper">
+      <header>
+      <div class="topnav" id="myTopnav">
+  <a href="#home" class="active">Home</a>
+  <a href="#introduction">Introduction</a>
+  <a href="#upcomingevents">Upcoming events</a>
+  <a href="#gallery">Gallery</a>
+  <a href="#meetourteam">Meet our team</a>
+  <a href="#contactus">Contact us</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
 
-                        </div>
-                        <div class="col-md-4 col-sm-4">
-                            <div >
-                              <img style="margin-top:0px" src="img/iiti2.png" width="100px" height="100px">
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-            </section>
-            <section class="header-bottom">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-5 col-sm-12 col-xs-12">
-                            <a href="#">
-                                <div class="main-logo">
-                                    <img src="img/sbharat1.jpg" alt="">
-                                    <h2>SWACHH BHARAT ABHIYAAN</h2>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-7 col-sm-12 col-xs-12">
-                            <div class="menu">
-                                <ul class="nav navbar-nav">
-                                    <li class="active"><a href="#">HOME</a></li>
-                                    <li><a href="#">INTRODUCTION</a></li>
-                                    <li><a href="#">UPCOMING EVENTS</a></li>
-                                    <li><a href="#">EVENT</a></li>
-                                    <li><a href="#">GALLERY </a></li>
-                                    <!-- <li><a href="#">BLOG</a></li> -->
-                                    <li><a href="#">CONTACT</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </header>
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
+</header>
 
         <section class="carosal-area">
             <div class="container">
@@ -75,13 +55,13 @@
                     <div class="col-md-12">
                         <div class="client owl-carousel owl-theme">
                             <div class="item">
-                              <img src="img/createdimg.jpg"></img>
+                              <img src="img/bg_1.png"></img>
                             </div>
                             <div class="item">
-                            <img src="img/createdimg2.jpg"></img>
+                            <img src="img/bg_2.png"></img>
                             </div>
                             <div class="item">
-                                <img src="img/createdimg3.jpg"></img>
+                                <img src="img/bg_3.png"></img>
                             </div>
                             <!-- <div class="item">
                                 <div class="text">
@@ -104,8 +84,8 @@
                 </div>
             </div>
         </section>
-        <section class="our_activity">
-            <h2>Introduction</h2>
+        <section class="our_activity" id="introduction">
+            <h2 >Introduction</h2>
             <p>Prime Minister Shri Narendra Modi Launched the ambitious 'Swachh Bharat Abhiyan' (Clean India Mission) 2nd October 2014.<br> The 'Abhiyan' was launched on the ocassion of Mahatama Gandhi's 145th birth anniversary.It aims to eliminate open<br> defecation and improve solid waste management (SWM) in urban and rural areas in India.<br>
 The objectives of the mission also included eradication of manual scavenging, generating awareness and bringing<br> about a behavior change regarding sanitation practices, and augmentation of capacity at the local level.</p>
 
@@ -115,9 +95,9 @@ The objectives of the mission also included eradication of manual scavenging, ge
                         <div class="single-Promo">
                             <div class="promo-icon">
                                 <i class="material-icons">near_me</i>
-                                <h2 style="text-algn:center">Objective</h2>
+
                             </div>
-                            <br><br><br>
+                            <h2 style="text-align:center">Objective</h2>
                             <p>Preparation of a project 'Visual content as an aid to spreading awareness against the spread of Covid-19'<br>
                             Digital artworks/posters and its social media presence. </p>
                         </div>
@@ -126,9 +106,9 @@ The objectives of the mission also included eradication of manual scavenging, ge
                         <div class="single-Promo">
                             <div class="promo-icon">
                                 <i class="material-icons">favorite</i>
-                                  <h2 style="text-algn:center">Plan</h2>
+
                             </div>
-                          <br><br><br>
+                            <h2 style="text-align:center">Plan</h2>
                             <p>Making our campus with zero wastes, separation of decomposable waste, like, chemicals of different labs, electronic waste, polythene, etc.<br>
                              Swachhata campaign and behaviour change communication in our adopted Villages.</p>
                         </div>
@@ -137,12 +117,12 @@ The objectives of the mission also included eradication of manual scavenging, ge
                         <div class="single-Promo">
                             <div class="promo-icon">
                                 <i class="material-icons">dashboard</i>
-                                <h2>Reports</h2>
-                                <a href="#">Year 2019</a>
-                                <br>
-                                <a href="#">Year 2020</a>
+
                             </div>
-                            <br><br><br><br><br>
+                            <h2 style="text-align:center">Reports</h2>
+                          <p style="text-align:center"><a href="RAA.pdf">Year 2019</a><img src="img/icons8-pdf-64.png"></p>
+                          <p style="text-align:center"><a href="students.pdf">Year 2020</a><img src="img/icons8-pdf-64.png"></p>
+                          </div>
                             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p> -->
                         </div>
                     </div>
@@ -169,9 +149,9 @@ The objectives of the mission also included eradication of manual scavenging, ge
                 </div>
             </div>
         </section> -->
-        <section class="events_section_area">
-            <h2>UPCOMING EVENTS</h2>
-            <p>Watch this space for more information on upcoming events related to swachh bharat abhiyaan</p>
+        <section class="events_section_area" id="upcomingevents">
+            <h2 style="text-align:center" class="underline_text" >UPCOMING EVENTS</h2>
+            <p style="text-align:center">Watch this space for more information on upcoming events related to swachh bharat abhiyaan</p>
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-xs-12">
@@ -238,8 +218,8 @@ The objectives of the mission also included eradication of manual scavenging, ge
                 </div>
             </div>
         </div>
-        <section class="our_cuauses">
-            <h2>Gallery</h2>
+        <section class="our_cuauses" id="gallery">
+            <h2>GALLERY</h2>
 
             <div class="container">
                 <div class="row">
@@ -335,10 +315,10 @@ The objectives of the mission also included eradication of manual scavenging, ge
                 </div>
             </div>
         </section> -->
-        <div class="clear"></div>
-        <section class="volunteer_area">
-            <h2>Meet our team</h2>
-            <p>IIT indore has an enthusiastic and vibrant team which manages the set of activities related to Swachh Bharat Abhiyaan </p>
+
+        <section class="volunteer_area" id="meetourteam">
+            <h2 style="text-align:center">MEET OUR TEAM</h2>
+            <p style="text-align:center">IIT indore has an enthusiastic and vibrant team which manages the set of activities related to Swachh Bharat Abhiyaan </p>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -349,7 +329,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
                                     <h3>Dr. Niraj Kumar Shukla</h3>
                                     <h6>Convener</h6>
                                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisi</p> -->
-                                    <h5><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></h5>
+                                    <h5><a href="mailto:nirajshukla@iiti.ac.in">nirajshukla@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
                                 </div>
                             </div>
                             <div class="item">
@@ -358,7 +338,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
                                     <h3>Dr. Ananya Ghoshal</h3>
                                     <h6>Team Coordinator</h6>
                                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisi</p> -->
-                                    <h5><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></h5>
+                                    <h5><a href="mailto:demo@iiti.ac.in">abc@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
                                 </div>
                             </div>
                             <div class="item">
@@ -367,7 +347,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
                                     <h3>Dr. Aruna Tiwari</h3>
                                     <h6>Member</h6>
                                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisi</p> -->
-                                    <h5><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></h5>
+                                    <h5><a href="mailto:artiwari@iiti.ac.in">artiwari@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
                                 </div>
                             </div>
                             <div class="item">
@@ -376,7 +356,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
                                     <h3>Ms. Monika Gupta</h3>
                                     <h6>Deputy Registrar(Student Affairs)</h6>
                                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisi</p> -->
-                                    <h5><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></h5>
+                                    <h5><a href="mailto:demo@iiti.ac.in">abc@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
                                 </div>
                             </div>
                             <div class="item">
@@ -385,7 +365,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
                                     <h3>Dr. Ashisha Kumar</h3>
                                     <h6>Member</h6>
                                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisi</p> -->
-                                    <h5><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></h5>
+                                    <h5><a href="mailto:akumar@iiti.ac.in">akumar@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
                                 </div>
                             </div>
                             <div class="item">
@@ -394,7 +374,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
                                     <h3>Mr. Sunil</h3>
                                     <h6>Member</h6>
                                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisi</p> -->
-                                    <h5><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></h5>
+                                    <h5><a href="mailto:demo@iiti.ac.in">abc@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
                                 </div>
                             </div>
                         </div>
@@ -504,7 +484,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
 
 
 
-        <footer class="footer">
+        <footer class="footer" id="contactus">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-12">
@@ -513,7 +493,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
 
                             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p> -->
                             <!-- <hr> -->
-                            <p><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></p>
+                            <p></p>
                         </div>
                     </div>
                     <div class="col-md-8">
@@ -534,10 +514,10 @@ The objectives of the mission also included eradication of manual scavenging, ge
                                 <div class="footer-text two">
                                     <h3>USEFUL LINKS</h3>
                                     <ul>
-                                        <li><a href="#">Home</a></li>
-                                        <li><a href="#">Causes</a></li>
-                                        <li><a href="#">Event</a></li>
-                                        <li><a href="#">Blog</a></li>
+                                        <li><a href="https://swachhbharatmission.gov.in">swachhbharatmission.gov.in</a></li>
+                                        <li><a href="https://swachhbhart.mygov.in">swachhbharat.mygov.in</a></li>
+                                        <li><a href="http://swachh.mp.gov.in">swachh.mp.gov.in</a></li>
+                                        <li><a href="https://www.facebook.com/SwachhBharatAbhiyaan/">SwachhBharatAbhiyaan</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -545,18 +525,21 @@ The objectives of the mission also included eradication of manual scavenging, ge
                                 <div class="footer-text one">
                                     <h3>CONTACT US</h3>
                                     <ul>
-                                        <li><a href="#"><i class="material-icons">location_on</i>1 Street, Indore, FL 2147, India</a></li>
-                                        <li><a href="#"><i class="material-icons">email</i>ebsb@iiti.ac.in</a></li>
+                                        <li><a href="https://www.google.com/maps/place/IIT+Indore/@22.5203597,75.918529,17z/data=!3m1!4b1!4m5!3m4!1s0x3962efcccbce7145:0x784e8cb69818596b!8m2!3d22.5203597!4d75.9207231"><i class="material-icons">location_on</i>IIT Indore,Simrol,Indore,Madhya Pradesh, India</a></li>
+                                        <li><a href="mailto:ebsb@iiti.ac.in"><i class="material-icons">email</i>ebsb@iiti.ac.in</a></li>
                                         <li><a href="#"><i class="material-icons">call</i>+123456789</a></li>
                                     </ul>
                                 </div>
+                            </div>
+                            <div class="col-md-4 col-sm-4">
+                                <a href="https://www.iiti.ac.in"><img src="img/rsz_iiti2.png"></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="footer_bottom">
-                <p>Copyright @ 2020 <a href="#">IIT Indore</a> | All Rights Reserved </p>
+                <p>Copyright @ 2020 <a href="https://www.iiti.ac.in">IIT Indore</a> | All Rights Reserved </p>
             </div>
         </footer>
     </div>
