--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Swachh Bharat Abhiyaan</title>
-
+    <link rel="shortcut icon" href="img/sba.jpg" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="img/sba.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
 
@@ -61,8 +62,9 @@ function myFunction() {
                             <img src="img/bg_2.png"></img>
                             </div>
                             <div class="item">
-                                <img src="img/bg_3.png"></img>
+                                <img src="img/bgimg.png"></img>
                             </div>
+
                             <!-- <div class="item">
                                 <div class="text">
                                     <h3>CHILDREN NEED YOUR HELP</h3>
@@ -156,7 +158,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
                 <div class="row">
                     <div class="col-md-4 col-xs-12">
                         <div class="events_single">
-                            <img src="img/events_single_one.jpg" alt="">
+                            <img src="img/p3.jpg" alt="">
                             <p><span class="event_left"><i class="material-icons">access_time</i>1:00 pm - 3:00 pm</span><span class="event_right"><i class="material-icons">location_on</i>IIT Indore</span></p>
                             <div class="clear"></div>
                             <h3>Session on waste management.</h3>
@@ -165,7 +167,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
                     </div>
                     <div class="col-md-4 col-xs-12">
                         <div class="events_single">
-                            <img src="img/events_single_two.jpg" alt="">
+                            <img src="img/plantation.jpg" alt="">
                             <p><span class="event_left"><i class="material-icons">access_time</i>1:00 pm - 3:00 pm</span><span class="event_right"><i class="material-icons">location_on</i>IIT Indore</span></p>
                             <h3>Plantation and Cleaning.</h3>
                             <!-- <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</h6> -->
@@ -173,7 +175,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
                     </div>
                     <div class="col-md-4 col-xs-12">
                         <div class="events_single">
-                            <img src="img/events_single_three.jpg" alt="">
+                            <img src="img/p5.jpg" alt="">
                             <p><span class="event_left"><i class="material-icons">access_time</i>1:00 pm - 3:00 pm</span><span class="event_right"><i class="material-icons">location_on</i>IIT Indore</span></p>
                             <h3>Anti-Polythene drive,Awareness and Disposal of plastic waste.</h3>
                             <!-- <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</h6> -->
@@ -338,25 +340,17 @@ The objectives of the mission also included eradication of manual scavenging, ge
                                     <h3>Dr. Ananya Ghoshal</h3>
                                     <h6>Team Coordinator</h6>
                                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisi</p> -->
-                                    <h5><a href="mailto:demo@iiti.ac.in">abc@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
+                                    <h5><a href="mailto:aghoshal@iiti.ac.in">aghoshal@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
                                 </div>
                             </div>
-                            <div class="item">
-                                <img src="img/aruna.jpg" alt="">
-                                <div class="text">
-                                    <h3>Dr. Aruna Tiwari</h3>
-                                    <h6>Member</h6>
-                                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisi</p> -->
-                                    <h5><a href="mailto:artiwari@iiti.ac.in">artiwari@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
-                                </div>
-                            </div>
+
                             <div class="item">
                                 <img src="img/monika.png" alt="">
                                 <div class="text">
                                     <h3>Ms. Monika Gupta</h3>
-                                    <h6>Deputy Registrar(Student Affairs)</h6>
+                                    <h6>Member</h6>
                                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisi</p> -->
-                                    <h5><a href="mailto:demo@iiti.ac.in">abc@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
+                                    <h5><a href="mailto:counsellor@iiti.ac.in">counsellor@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
                                 </div>
                             </div>
                             <div class="item">
@@ -372,9 +366,9 @@ The objectives of the mission also included eradication of manual scavenging, ge
                                 <img src="img/sunil.jpg" alt="">
                                 <div class="text">
                                     <h3>Mr. Sunil</h3>
-                                    <h6>Member</h6>
+                                    <h6>Deputy Registrar(Student Affairs)</h6>
                                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisi</p> -->
-                                    <h5><a href="mailto:demo@iiti.ac.in">abc@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
+                                    <h5><a href="mailto:drsa@iiti.ac.in">drsa@iiti.ac.in <i class="fa fa-envelope" aria-hidden="true"></i></a></h5>
                                 </div>
                             </div>
                         </div>
@@ -514,10 +508,10 @@ The objectives of the mission also included eradication of manual scavenging, ge
                                 <div class="footer-text two">
                                     <h3>USEFUL LINKS</h3>
                                     <ul>
-                                        <li><a href="https://swachhbharatmission.gov.in">swachhbharatmission.gov.in</a></li>
-                                        <li><a href="https://swachhbhart.mygov.in">swachhbharat.mygov.in</a></li>
-                                        <li><a href="http://swachh.mp.gov.in">swachh.mp.gov.in</a></li>
-                                        <li><a href="https://www.facebook.com/SwachhBharatAbhiyaan/">SwachhBharatAbhiyaan</a></li>
+                                        <li><a href="https://swachhbharatmission.gov.in">swachhbharatmission.gov.in<i class="fa fa-link" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://swachhbhart.mygov.in">swachhbharat.mygov.in<i class="fa fa-link" aria-hidden="true"></i></a></li>
+                                        <li><a href="http://swachh.mp.gov.in">swachh.mp.gov.in<i class="fa fa-link" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://www.facebook.com/SwachhBharatAbhiyaan/">SwachhBharatAbhiyaan<i class="fa fa-link" aria-hidden="true"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -527,7 +521,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
                                     <ul>
                                         <li><a href="https://www.google.com/maps/place/IIT+Indore/@22.5203597,75.918529,17z/data=!3m1!4b1!4m5!3m4!1s0x3962efcccbce7145:0x784e8cb69818596b!8m2!3d22.5203597!4d75.9207231"><i class="material-icons">location_on</i>IIT Indore,Simrol,Indore,Madhya Pradesh, India</a></li>
                                         <li><a href="mailto:ebsb@iiti.ac.in"><i class="material-icons">email</i>ebsb@iiti.ac.in</a></li>
-                                        <li><a href="#"><i class="material-icons">call</i>+123456789</a></li>
+                                        <!-- <li><a href="#"><i class="material-icons">call</i>+123456789</a></li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -539,7 +533,7 @@ The objectives of the mission also included eradication of manual scavenging, ge
                 </div>
             </div>
             <div class="footer_bottom">
-                <p>Copyright @ 2020 <a href="https://www.iiti.ac.in">IIT Indore</a> | All Rights Reserved </p>
+                <p>Copyright @ 2020 <a href="https://www.iiti.ac.in">IIT Indore</a> | All Rights Reserved | created by <a href="mailto:ms1904101007@iiti.ac.in">Shatendra Singh</a></p>
             </div>
         </footer>
     </div>
